testdata/language-features/basic-values/case04.reject.out
type error: can not unify
[32m()[m
with
[32m'Char[m

in testdata/language-features/basic-values/case04.reject.lc:2:8:
  1 -> '1'
       ^^^

------------ trace
!type error: can not unify
[32m()[m
with
[32m'Char[m

in testdata/language-features/basic-values/case04.reject.lc:2:8

------------ tooltips
testdata/language-features/basic-values/case04.reject.lc 2:8-2:11  Char
testdata/language-features/basic-values/case04.reject.lc 3:8-3:10  ()
